Fix Nginx config, add jquery.min.js, fix 500/404 errors in base.html v6, home.html v2, tab3.html v5; implement Tab 3 fixes in tab3.py v77, tab3.js v24; fix categories.py v28, categories.js v5; update rfid_dash_dev.service v5, rfid_dash_dev.conf

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,7 +47,7 @@
         {% block content %}{% endblock %}
     </div>
 
-    <script src="{{ url_for('static', filename='lib/jquery/jquery.min.js') }}?v={{ '' | timestamp }}"></script>
+    <script src="{{ url_for('static', filename='lib/jquery.min.js') }}?v={{ '' | timestamp }}"></script>
     <script src="{{ url_for('static', filename='lib/bootstrap/bootstrap.bundle.min.js') }}?v={{ '' | timestamp }}"></script>
     <script src="{{ url_for('static', filename='lib/htmx/htmx.min.js') }}?v={{ '' | timestamp }}"></script>
     <script src="{{ url_for('static', filename='js/common.js') }}?v={{ '' | timestamp }}"></script>
