--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,48 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}RFID Dashboard{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/bootstrap.min.css') }}?v={{ '' | timestamp }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}?v={{ '' | timestamp }}">
     {% block head %}{% endblock %}
     {% block extra_head %}{% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="/">RFID DASHBOARD</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/tab/1">Rental Inventory</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/tab/2">Open Contracts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/tab/3">Service</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/tab/4">Laundry Contracts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/tab/5">Resale</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/categories">Manage Categories</a>
-                    </li>
-                </ul>
-            </div>
+    <nav class="navbar navbar-expand-lg">
+        <div class="navbar-brand">RFID DASHBOARD</div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('home.home') }}">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('tabs.tab_view', tab_num=1) }}">Rental Inventory</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('tabs.tab_view', tab_num=2) }}">Open Contracts</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('tabs.tab_view', tab_num=3) }}">Service</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('tabs.tab_view', tab_num=4) }}">Laundry Contracts</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('tabs.tab_view', tab_num=5) }}">Resale</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('categories.categories') }}">Manage Categories</a></li>
+            </ul>
         </div>
     </nav>
 
-    <div class="container mt-4">
+    <div class="container">
         {% block content %}{% endblock %}
     </div>
 
