"Fix BuildError for Manage Categories URL

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,7 +23,7 @@
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('tabs.tab_view', tab_num=3) }}">Service</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('tabs.tab_view', tab_num=4) }}">Laundry Contracts</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('tabs.tab_view', tab_num=5) }}">Resale</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('categories.categories') }}">Manage Categories</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('categories.manage_categories') }}">Manage Categories</a></li>
             </ul>
         </div>
     </nav>
