--- a/app/templates/common.html
+++ b/app/templates/common.html
@@ -25,7 +25,7 @@
             </thead>
             <tbody>
                 {% include '_category_rows.html' ignore missing %}
-                {% if not self._category_rows() %}
+                {% if not categories or categories | length == 0 %}
                     <tr><td colspan="7">No data available</td></tr>
                 {% endif %}
             </tbody>
