--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,10 +4,14 @@
     {% block head %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RFID DASHBOARD</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <title>{% block title %}RFID DASHBOARD{% endblock %}</title>
+    <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" media="all" onload="if(this.media!='all')this.media='all'">
     <link rel="stylesheet" href="/static/css/common.css">
     <link rel="stylesheet" href="/static/css/tab1.css">
+    {% if request.path == '/tab/3' %}
+    <link rel="stylesheet" href="/static/css/tab3.css">
+    {% endif %}
     <link rel="icon" href="/static/favicon.ico">
     {% endblock %}
     {% block extra_head %}{% endblock %}
@@ -53,6 +57,8 @@
         {% elif request.path == '/' or request.path == '/home' %}
             <script src="/static/js/tab1.js?cb={{ cache_bust }}"></script>
         {% endif %}
+        <script src="/static/lib/bootstrap/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     {% endblock %}
 </body>
 </html>
