--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,16 +8,21 @@
     <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" media="all" onload="if(this.media!='all')this.media='all'">
     <link rel="stylesheet" href="/static/css/common.css">
-    <link rel="stylesheet" href="/static/css/tab1.css">
-    {% if request.path == '/tab/3' %}
-    <link rel="stylesheet" href="/static/css/tab3.css">
+    {% if request.path == '/tab/1' %}
+        <link rel="stylesheet" href="/static/css/tab1.css">
+    {% elif request.path == '/tab/2' or request.path == '/tab/4' %}
+        <link rel="stylesheet" href="/static/css/tab2_4.css">
+    {% elif request.path == '/tab/3' %}
+        <link rel="stylesheet" href="/static/css/tab3.css">
+    {% elif request.path == '/tab/5' %}
+        <link rel="stylesheet" href="/static/css/tab5.css">
     {% endif %}
     <link rel="icon" href="/static/favicon.ico">
     {% endblock %}
     {% block extra_head %}{% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">RFID DASHBOARD</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +41,7 @@
             </div>
         </div>
     </nav>
-    <div class="container">
+    <div class="container mt-3">
         {% block content %}{% endblock %}
     </div>
     {% block scripts %}
